# mcp-server-entra-example

./: .env.example  README.md  auth.py  pyproject.toml  server.py  tools.py
examples/: connect_with_client.py
