[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-entra-example"
version = "0.1.0"
description = "A minimal FastMCP server that validates Microsoft Entra ID (Azure AD) access tokens, with an example tool and an example MCP App. The Entra token-verifier variant of mcp-server-example."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.4,<4",
]

[tool.setuptools]
py-modules = ["server", "auth", "tools"]
